--- a/files/default/upstart.conf
+++ b/files/default/upstart.conf
@@ -7,7 +7,5 @@ stop on runlevel [!2345]
 respawn
 
 script
-    cd /usr/share/s3ftpd
-    export PATH=/opt/opscode/embedded/bin:$PATH
-    exec bundle exec em-ftpd config.rb 2>&1 >>/var/log/s3ftpd.log
+    exec /usr/share/s3ftpd/scripts/start
 end script
